--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,13 @@
     <groupId>cn.lihongjie</groupId>
     <artifactId>learn_mybatis_by_testing</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-
-
+    <dependencies>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.14</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
