--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,19 @@
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.41</version>
+        </dependency>
+
+
     </dependencies>
 
 
